; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_rev-list.c_push_spec.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_rev-list.c_push_spec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*, i32)* @push_spec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @push_spec(i32* %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @git_revparse_single(i32** %11, i32* %12, i8* %13)
  store i32 %14, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %5, align 4
  br label %27

18:                                               ; preds = %4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %11, align 8
  %21 = call i32 @git_object_id(i32* %20)
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @push_commit(i32* %19, i32 %21, i32 %22)
  store i32 %23, i32* %10, align 4
  %24 = load i32*, i32** %11, align 8
  %25 = call i32 @git_object_free(i32* %24)
  %26 = load i32, i32* %10, align 4
  store i32 %26, i32* %5, align 4
  br label %27

27:                                               ; preds = %18, %16
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @git_revparse_single(i32**, i32*, i8*) #1

declare dso_local i32 @push_commit(i32*, i32, i32) #1

declare dso_local i32 @git_object_id(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
